# eventbridge-discovery

./: .gitattributes  .gitignore  .npmignore  .projenrc.js  .projenrc.ts  catalog-info.yaml  diagram.dot  mkdocs.yaml  package.json
.github/workflows/: upgrade.yml
.projen/: deps.json  files.json  tasks.json
data/: Makefile  faker-gen.py  pyproject.toml
docs/: API.md  data.md  index.md
src/: enums.ts  index.ts  state-machine.ts
src/constructs/: bucket.ts
src/lambdas/s3-to-eventbus/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
test/: eventbridge-discovery-test.ts  eventbridge-discovery.integ.ts  util.ts
test/eventbridge-discovery.integ.snapshot/: integ-stack.assets.json  integ-stack.template.json
